Refactor: Added TextAttributes.java (making TerminalBuffer.java more readable)